xml_struct_tests/ui/test_cases/type_properties/text_enum_with_non_unit_variants.stderr
error: only unit enums may be derived as text
 --> ui/test_cases/type_properties/text_enum_with_non_unit_variants.rs:4:14
  |
4 | #[xml_struct(text)]
  |              ^^^^

error: only unit enums may be derived as text
  --> ui/test_cases/type_properties/text_enum_with_non_unit_variants.rs:12:14
   |
12 | #[xml_struct(text)]
   |              ^^^^
